fix cards align

--- a/src/app/catalog/list-pro/list-pro.component.css
+++ b/src/app/catalog/list-pro/list-pro.component.css
@@ -1,6 +1,6 @@
 html,
 body {
-  height: 100%;
+  height: 100vh;
 }
 
 body {
@@ -10,12 +10,10 @@ body {
 
 .profesionals-list {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
-  width: 95%;  
+  max-width: 100%;
 }
 
 .profesionals-list-titles{
@@ -33,18 +31,17 @@ body {
   margin-left: 1em;
   font-size: calc(.6em + 1vw);
   font-weight: 400;
-  width: 95%;
+  width: 90%;
   line-height: 1.3em;
 }
 
 
 .profesional-card {
   background-color: #FFFFFF;
-  width: calc(90% - 50px);
   border-radius: 15px;
   margin-bottom: 15px;
-  min-width: 325px;
-  max-width: 750px;
+  min-width: 350px;
+  max-width: 900px;
 }
 
 .acordion {
@@ -119,7 +116,7 @@ mat-icon{
 .label-card{
   margin-top: 1em;;
   margin-left: 0px;
-  font-size: calc(.4em + 1.2vw);
+  font-size: calc(.7em + 1vw);
   font-weight: 500;
   width: 100%;
 }
@@ -128,9 +125,10 @@ mat-icon{
   margin-top: 1em;
   margin-bottom: 1em;
   margin-left: 35px;
-  font-size: calc(.4em + 1.2vw);
+  font-size: calc(.7em + 1vw);
   font-weight: 400;
   color: #667080;
+  line-height: 1.3em;
 
 }
 
